--- a/scss/layout/_contact-form.scss
+++ b/scss/layout/_contact-form.scss
@@ -15,7 +15,7 @@
 .text-input {
     label, input {
         display: block;
-        width: 20rem;
+        width: 10rem;
     }
     input {
         height: 2.5rem;
