--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,6 +5,7 @@
     padding: 1.25rem 1rem 0.25rem 0.5rem;
   //  min-width: 100vw;
     gap: 1rem;
+    row-gap: 2rem;
  
   
     grid-template-areas:
