--- a/scss/layout/_latest-news.scss
+++ b/scss/layout/_latest-news.scss
@@ -11,6 +11,8 @@
 }
 
 $med-card-height: 36rem;
+$med-card-area-height: 38rem;
+$lg-card-height: 36rem;
 
 
 .latest-news h2 {
@@ -22,23 +24,23 @@ $med-card-height: 36rem;
     gap: 2rem;
     padding: 0 1rem;
     grid-template-columns: repeat(6, 1fr);
+    justify-content: center;    
 
     @include md { 
         grid-template-rows: $med-card-height 0 0 0 0;
-    
-    }     
- 
+        max-height: $med-card-area-height; 
+        overflow: hidden;   
+    }       
 } 
 
 .latest-card {
     @include small-text;
+    overflow: visible;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    max-height: $med-card-height;
-    min-height: $med-card-height;
-    overflow: hidden;    
+
     & > *:not(:first-child) {
        padding:  1rem;
-    }
+    }   
    
     grid-column: span 6;
  //   @extend %card;
@@ -51,6 +53,7 @@ $med-card-height: 36rem;
 
     @include md {
         grid-column: span 3;
+    
     }
 
    
